src/test/deca/codegen/invalid/sansObjet/non_initialise.deca
// Description :
//    print une variable non initialisée
//
// Resultats :
//    Erreur : WINT avec R1 indefini

{
    int a;
    print(a);
}